[publish] TW-53360 New Pagination UI - fix spacing between links

--- a/components/pager/pager.css
+++ b/components/pager/pager.css
@@ -11,7 +11,7 @@
 .link {
   display: inline-block;
 
-  margin-right: calc(unit * 4);
+  margin-right: calc(unit * 2);
 }
 
 .linkDisabled {
